# hwp_auto

./: .gitignore  .mcp.json.example  CHANGELOG.md  CONTRIBUTING.md  README.ko.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release-studio.yml  release.yml
docs/: .pdca-status.json  CODEX_COLLABORATION.md  GUI_실행_가이드.md  ROADMAP.md  upstream-rhwp-issue.md
gui/: app.css  app.js  index.html
handoff/: README.md
handoff/codex/: 001_hwp_binary_parser_spike.md  004_hwpx_text_extractor.md  005_paragraph_enumeration.md  008_v0_1_release_prep.md  009_hwpx_table_cell_edit.md  (+2 more)
mcp-server/: README.md  config.py  document_store.py  gui_ai.py  gui_server.py  pyproject.toml  server.py
mcp-server/adapters/: __init__.py  rhwp_adapter.py
mcp-server/bridges/: README.md  package-lock.json  package.json  rhwp_extract.mjs  rhwp_save.mjs  smoke_test.mjs
mcp-server/cli_wrappers/: __init__.py  claude_wrapper.py  codex_wrapper.py  opencode_wrapper.py  provider_router.py
mcp-server/orchestration/: prompt_builder.py  response_mapper.py
mcp-server/schemas/: common.py
mcp-server/tests/: conftest.py  test_mcp_tools.py  test_rhwp_adapter.py
mcp-server/tools/: create_table.py  extract_document_structure.py  extract_document_text.py  insert_paragraph_after.py  open_document.py  replace_paragraph_text.py  rhwp_integration_status.py  rhwp_save_status.py  save_as.py  validate_document.py
outputs/: README.md
scripts/: rhwp_extract_template.py  run_mcp_server.sh  run_rhwp_studio.sh  test_rhwp_bridge.sh
studio/: pyproject.toml
tests/: conftest.py  test_cli_providers.py
(+46 files in other folders)
